--- a/prop_for_3d/templates/prop_for_3d/facility.html
+++ b/prop_for_3d/templates/prop_for_3d/facility.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-<section class="section-bg">
+<div class="section-bg">
     <div class="row no-gutters">
         <div class="col-md-2">
             <img src="{% static 'images/meltio-m450.jpg' %}" title="MELTIO M450" alt="MELTIO M450">
@@ -33,6 +33,6 @@
         <div class="col-md-10 bio">The <strong>ALC600G</strong>, Rigid Linear Motor Driven CE Certified Wire EDM (Electrical Discharge Machinning) Machine, is one of the newest additions to the Sodick product line-up. This new machine includes some exciting new features, such as a full security enclosure, next-generation SPW control with Smart Pulse Generator, and other performance boosting technologies. The ALC series wire EDM offers the most advanced safety features on the market, in full compliance with international CE specifications.</div>
     </div>
 
-</section>
+</div>
 
 {% endblock %}
