--- a/prop_for_3d/templates/prop_for_3d/index.html
+++ b/prop_for_3d/templates/prop_for_3d/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="section-bg">
+<div class="section-bg">
     <div class="row no-gutters front-text-format">
         <p> Metal 3D printing is a growing alternative method to manufacture complex parts and for most applications is
             a well-established process. The method is based on selective laser or electron-beam melting of layers of
@@ -16,6 +16,6 @@
             to reduce manufacturing and post processing cost, CO2 emission, product longevity, and especially the
             possibility to develop the manufacturing upscaling.</p>
     </div>
-</section>
+</div>
 
 {% endblock %}
