--- a/prop_for_3d/templates/prop_for_3d/team.html
+++ b/prop_for_3d/templates/prop_for_3d/team.html
@@ -4,7 +4,7 @@
 
 {% load static %}
 
-    <section class="section-bg">
+    <div class="section-bg">
         <div class="row no-gutters">
             <div class="col-md-2">
                 <img src="{% static 'images/jurgita.jpg' %}" title="Dr Jurgita Zekonyte" alt="Dr Jurgita Zekonyte">
@@ -25,6 +25,6 @@
             </div>
             <div class="col-md-10 bio">Dr Krassimir Dotchev - specialist in advanced CAD modelling and has a wealth of experience in AM. Krassimir is a Senior Lecturer in Mechanical Engineering Design and CAD/CAM/CAE in the School of Engineering. Through his work on research and commercial projects he gained a vast expertise in CAD/CAM systems, computer aided engineering, and advanced modelling including topology and surface optimization, selective laser sintering, stereolithography, CAD/STL data manipulation, CAD/STL data manipulation, rapid product development, design for manufacture using various manufacturing approaches. He is also an expert in Automotive Engineering Design and Analysis</div>
         </div>
-    </section>
+    </div>
     
 {% endblock %}
