--- a/templates/base.html
+++ b/templates/base.html
@@ -54,14 +54,14 @@
 
             </div>
         </div>
-    </header>
+    </header>        
 
     <main>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
     </main>    
-
+    
     <footer class="container-fluid">
         <div class="row">
             <div class="col-sm-4 footer-item-marg">
@@ -105,8 +105,9 @@
                 </ul>
             </div>
         </div>
+        <p>DISCLAIMER: this is an unofficial site of the Team. The site is built for the training purposes and cannot be used at present as a an official platform.</p>       
         <div class="row copyright">
-            <p>By DrSYakovlev, June 2024</p>
+            <p>By DrSYakovlev, June 2024<br><strong>DISCLAIMER: THIS IS AN UNOFFICIAL SITE OF THE TEAM. THE SITE IS BUILT FOR THE TRAINING PURPOSE ONLY AND CANNOT BE USED AT PRESENT AS AN OFFICIAL PLATFORM.</strong></p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
