--- a/prop_for_3d/templates/prop_for_3d/index.html
+++ b/prop_for_3d/templates/prop_for_3d/index.html
@@ -13,7 +13,7 @@
         <br>
         <br>
         <p>This is a novel approach of using this technique to create functional surfaces directly on substrates aiming
-            to reduce manufacturing and post processing cost, CO2 emission, product longevity, and especially the
+            to reduce manufacturing and post processing cost, CO<sub>2</sub> emission, product longevity, and especially the
             possibility to develop the manufacturing upscaling.</p>
     </div>
 </div>
