--- a/prop_for_3d/templates/prop_for_3d/proposals.html
+++ b/prop_for_3d/templates/prop_for_3d/proposals.html
@@ -5,19 +5,23 @@
 {% load static%}
 
 {% url 'account_login' as login_url %}
+
 {% url 'account_signup' as signup_url %}
+
 {% url 'account_logout' as logout_url %}
+
+
 
 <!--Below is the overwiew of the most recently submitted students ideas-->
 <br>
 <h3 id="ideas-header">Recent ideas<span class="material-symbols-outlined">lightbulb</span></h3>
 <div class="ideas">
     <p>
-        On this page you can:<br>
+        <u>On this page you can:</u><br>
         - Browse topics and autors of recently submitted proposal if you are not logged in and just searching for an
         inspiration.<br>
-        - Log in to be able to see the full text of ideas on the thrilling subject of of your fellow students or share
-        your own.<br>
+        - <b>Log in to be able to see the full text of ideas on the thrilling subject of 3d printing submitted by your fellow students or share
+        your own.</b><br>
         - N.b. this an area where you can propose a project idea you would like to implement in the context of your
         study rather than a brainstorm zone.
     </p>
@@ -39,36 +43,18 @@
 
     {% if user.is_authenticated %}
 
-    <p class="prop-overview">You are logged in as: {{ user.username }}</p>
     <div class="row">
-        <div class="col-6 offset-3 container">
+        <div class="col-11 container">
             <a href="{% url 'create_new' %}" target="_blank" class="share-idea btn btn-primary">Share your idea with
-                us.</a>
+                us</a>
         </div>
     </div>
-    <br>
-    <div class="row">
-        <div class="col-6 offset-3 container">
-            <a class="{% if request.path == logout_url %}active{% endif %} share-idea btn btn-secondary"
-                aria-current="page" href="{% url 'account_logout' %}">Logout</a>
-        </div>
-    </div>
-    <br>
-
+    <br>    
+    
     {% else %}
 
-    <p class="prop-overview">You are logged out</p>
-    <div class="container-fluid button-position">
-        <button class="nav-item">
-            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                href="{% url 'account_signup' %}">Register</a>
-        </button>
-        <button class="nav-item">
-            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                href="{% url 'account_login' %}">Login</a>
-        </button>
-
-    </div>
+    <p class="prop-overview">You need to log in to browse proposal content.</p>
+    
     <br>
     
     {% endif %}
