--- a/prop_for_3d/templates/prop_for_3d/delete.html
+++ b/prop_for_3d/templates/prop_for_3d/delete.html
@@ -17,14 +17,13 @@
                 <h3>Delete proposal {{ prop.title }}</h3>
                 <p>Deleting as: {{ user.username }}</p>
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
-                    <!--{{ form | crispy }}-->
                     {% csrf_token %}
                     <h3>You are about to delete your proposal. Please, make sure your idea is stored somewhere else.
                     </h3>
                     <button id="submitButton" type="submit" class="btn btn-danger btn-lg">Delete</button>
                     <div class="row">
                         <div class="col-6 offset-9 container">
-                            <a href="{% url 'proposals' %}" class="btn btn-secondary">Cancel</a>
+                            <a href="{% url 'prop_single' prop.pk %}" class="btn btn-secondary">Cancel</a>
                         </div>
                     </div>                
                 </form>
@@ -40,4 +39,3 @@
 </section>
 
 {% endblock %}
-
