--- a/prop_for_3d/templates/prop_for_3d/delete_confirm.html
+++ b/prop_for_3d/templates/prop_for_3d/delete_confirm.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-<div class="row">
-    <div class="col">
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="text-center">
         <br>
-        <p class="prop-overview">Your proposal is deleted.</p>
-        <p class="prop-overview"><a href="{% url 'proposals' %}" class="btn btn-primary">Back to list</a></p>
+        <h4 class="prop-overview "><b>YOUR PROPOSAL IS<br>DELETED</b></h4>
+        <a href="{% url 'proposals' %}" class="btn btn-primary">Back to list</a>
+        <hr>
+        <br>
     </div>
 </div>
 
