--- a/prop_for_3d/templates/prop_for_3d/new_prop.html
+++ b/prop_for_3d/templates/prop_for_3d/new_prop.html
@@ -19,7 +19,7 @@
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
                     {{ form | crispy }}
                     {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>                    
+                    <button id="submitButton" type="submit" class="btn btn-primary btn-lg">Submit</button>                    
                 </form>
                 
                 {% else %}
