--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,15 +10,15 @@
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
             <br>
-            <h1 style="padding-left: 10px;">{% trans "Sign Up" %}</h1>
-            <p style="padding-left: 10px;">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+            <h1 style="padding-left: 10px;">{% trans "Register" %}</h1>
+            <p style="padding-left: 10px;">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">Log In</a>.{% endblocktrans %}</p>
             <form class="signup form-control form-control" id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+                <button type="submit">{% trans "Log In" %} &raquo;</button>
             </form>
         </div>
     </div>
