fix collectstatic style.css

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -211,6 +211,7 @@ button {
 }
 
 
+
 /*----------Effects----------*/
 
 .menuitem:hover {
@@ -237,7 +238,8 @@ button {
 
 @media only screen and (max-width: 768px) {
     img {
-        width: 30%;
+        width: 125%;
+        padding-right: 20px;
     }
 }
 
