--- a/templates/base.html
+++ b/templates/base.html
@@ -132,8 +132,8 @@
                 </ul>
             </div>
         </div>               
-        <div class="row copyright">
-            <p>By DrSYakovlev, June 2024<br><strong>DISCLAIMER: THIS IS AN UNOFFICIAL SITE OF THE TEAM. THE SITE IS BUILT FOR THE TRAINING PURPOSE ONLY AND CANNOT BE USED AT PRESENT AS AN OFFICIAL PLATFORM.</strong></p>
+        <div class="row copyright" style="text-align: left; margin: 10px;">
+            <p style="text-align: left;">By DrSYakovlev, June 2024<br><strong>DISCLAIMER: THIS IS AN UNOFFICIAL SITE OF THE TEAM. THE SITE IS BUILT FOR THE TRAINING PURPOSE ONLY AND CANNOT BE USED AT PRESENT AS AN OFFICIAL PLATFORM.</strong></p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    
